# backend-test

./: .gitignore  README.md  harness.drawio  pyproject.toml
.claude/commands/: implement-linear.md
.github/workflows/: claude-code-review.yml  claude-review.yml
app/: audit_models.py  audit_store.py  auth.py  auth_models.py  main.py  models.py  store.py  transaction_models.py  transaction_store.py  user_store.py
tests/: test_audit.py  test_auth.py  test_customers.py  test_phone_login.py  test_rbac.py  test_search.py  test_soft_delete.py  test_transactions.py
